<resources>
    <string name="app_name">Fit Me! - Size guide</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Language</string>
    <string name="sharedPreferences" translatable="false">FitMe</string>
    <string name="sharedPreferences_Lang" translatable="false">SelectedLanguage</string>
    <string name="nav_left_calculator">Determine My Sizes</string>
    <string name="nav_left_table">Size Chart</string>
    <string name="nav_left_about">About</string>
    <string name="nav_tops">Tops</string>
    <string name="nav_bottoms">Bottoms</string>
    <string name="nav_shoe">Shoes</string>
    <string name="nav_hat">Hat</string>
    <string name="nav_ring">Ring</string>
    <string name="lang_Eng">English</string>
    <string name="lang_Vie">Vietnamese</string>
    <string name="lang_Kor">Korean</string>
    <string name="lang_chooserString">Choose language</string>
    <string name="version">Version: 1.0</string>
    <string name="about_message">Fit Me! only uses for reference. \nMetrics used in this application may have some differences based on brands and countries.</string>
    <string name="waist">Waist (cm)</string>
    <string name="hip">Hips (cm)</string>
    <string name="ethnic" translatable="false">Ethnic</string>
    <string name="result_message_asian">Asian (one size smaller)</string>
    <string name="result_message_non_asian">Non-asian</string>
    <string name="calculate">Calculate</string>
    <string name="gender">Gender</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="head_size">Head circumference (cm)</string>
    <string name="finger_size">Finger circumference (mm)</string>
    <string name="foot_length">Foot length (cm)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bust">Bust (cm)</string>
    <string name="chest">Chest (cm)</string>
    <string name="height">Height (cm)</string>
    <string name="neck">Neck (cm)</string>
    <string name="international">International</string>
    <string name="result_message_header">Your size</string>
    <string name="result_message_help">You can convert to another size categories by using Size Chart in Main Menu.</string>
    <string name="result_message_overSize">Larger than %1$s</string>
    <string name="result_message_error">You must fill at least 1 record</string>
    <string name="result_message_smallSize">Smaller than %1$s</string>
    <string name="kid">Kid</string>
    <string name="rate">Rate!!!</string>
    <string name="translator_1">Translator: Kihwan Nam (KR), Pavel Fadeev (RU)</string>
    <string name="russian">Russian</string>
    <string name="result_message_unit">Other units:</string>
    <string name="nav_left_list">My Size List</string>
    <string name="text_hint">Enter name</string>
    <string name="notes">Note</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="error">Error!!!</string>
    <string name="saveAlert">Do you want to save changes?</string>
    <string name="close">Close</string>
    <string name="edit">Edit profile</string>
    <string name="delete">Delete</string>
    <string name="deleteAlert">Do you want to delete %1$s?</string>
    <string name="deleteConfirm">Deleted %1$s successfully</string>
    <string name="name">Name</string>
    <string name="option_remove_picture">Remove photo</string>
    <string name="option_choose_photo">Choose photo</string>
    <string name="fill_name">Please enter a valid name</string>
</resources>
