<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_left_calculator"
            android:icon="@drawable/calc"
            android:title="@string/nav_left_calculator"/>
        <item
            android:id="@+id/nav_left_table"
            android:icon="@drawable/table"
            android:title="@string/nav_left_table"/>
        <item
            android:id="@+id/nav_left_list"
            android:icon="@drawable/list"
            android:title="@string/nav_left_list"/>
    </group>
    <item android:icon="@drawable/lang" android:id="@+id/nav_left_lang" android:title="@string/action_settings" />
    <item android:icon="@drawable/info" android:id="@+id/nav_left_about" android:title="@string/nav_left_about" />
</menu>
