<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/foot_length"
            android:layout_height="50dp"
            android:layout_weight="2.0"
            android:layout_width="100dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/foot"/>

        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_weight="2.0"
            android:layout_width="match_parent">

            <EditText
                android:hint="@string/foot_length"
                android:id="@+id/shoes_cm"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/gender"
            android:layout_height="50dp"
            android:layout_weight="2.0"
            android:layout_width="100dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/gender"/>

        <RadioGroup
            android:checkedButton="@+id/shoes_male"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:layout_width="match_parent">

            <RadioButton
                android:checked="false"
                android:id="@id/shoes_male"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_width="wrap_content"
                android:textColor="@color/subColor"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/shoes_female"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_width="wrap_content"
                android:textColor="@color/subColor"
                android:text="@string/female"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:background="@color/colorAccent"
        android:id="@+id/btn_shoes"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:text="@string/calculate"
        android:textColor="@android:color/white"/>
</LinearLayout>
    </ScrollView>
