<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/header_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logo"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/samsung_logo"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/worldskills_logo"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/version"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="Phuoc Tran, copyright © 2017"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/translator_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/about_message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_about_rate"
            style="@style/FlatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"/>

        <!--android:background="@color/colorAccent"-->
        <!--android:textColor="#ffffffff"/>-->

        <Button
            android:id="@+id/btn_about_ok"
            style="@style/FlatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"/>
        <!--android:background="@color/colorAccent"-->
        <!--android:textColor="#ffffffff"/>-->
    </LinearLayout>
</LinearLayout>
